--- a/react/public/index.html
+++ b/react/public/index.html
@@ -23,6 +23,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="./js/vconsole.min.js"></script>
+    <script>
+      // init vConsole
+      const vConsole = new VConsole();
+      console.log('Hello world');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
